@@ -1,3 +1,7 @@
+2011-11-07  6.7.3-4 Cristy  <quetzlzacatenango@image...>
+  * Add ShearRotateImage() method.  RotateImage() now uses distorts rather
+    than shears.
+
 2011-11-06  6.7.3-4 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.3-4, SVN revision 5876
 
